@@ -14,7 +14,7 @@ AC_PROG_LN_S
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 AC_PROG_MAKE_SET
-
+AM_PROG_CC_C_O
 
 dnl Check for librapi2
 PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.11)
